added Variant AST creation and json load/save